apps/6-netdata/4_deployments.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: netdata-slave
  namespace: netdata
  labels:
    app: netdata
    role: slave
spec:
  selector:
    matchLabels:
      app: netdata
      release: release-name
      role: slave
  template:
    metadata:
      annotations:
        container.apparmor.security.beta.kubernetes.io/netdata: unconfined
        checksum/config: 0f7f49d4d579131ff25fe271ef8c64ee00cf60026d38160acffb9c088997ed13
      labels:
        app: netdata
        release: release-name
        role: slave
    spec:
      serviceAccountName: netdata
      restartPolicy: Always
      hostPID: true
      hostIPC: true
      hostNetwork: true
      initContainers: null
      containers:
      - name: netdata
        image: netdata/netdata:v1.18.1
        imagePullPolicy: Always
        lifecycle:
          postStart:
            exec:
              command:
              - /bin/sh
              - -c
              - python -c 'import uuid; import socket; print(uuid.uuid3(uuid.NAMESPACE_DNS, socket.gethostname()))' > /var/lib/netdata/registry/netdata.public.unique.id
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - killall netdata; while killall -0 netdata; do sleep 1; done
        ports:
        - name: http
          containerPort: 19999
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /api/v1/info
            port: http
          timeoutSeconds: 1
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api/v1/info
            port: http
          timeoutSeconds: 1
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: proc
          readOnly: true
          mountPath: /host/proc
        - name: log
          readOnly: true
          mountPath: /host/var/log/
        - name: run
          mountPath: /var/run/docker.sock
        - name: sys
          readOnly: true
          mountPath: /host/sys
        - name: config
          mountPath: /etc/netdata/go.d/coredns.conf
          subPath: coredns
        - name: config
          mountPath: /etc/netdata/go.d/k8s_kubelet.conf
          subPath: kubelet
        - name: config
          mountPath: /etc/netdata/go.d/k8s_kubeproxy.conf
          subPath: kubeproxy
        - name: config
          mountPath: /etc/netdata/netdata.conf
          subPath: netdata
        - name: config
          mountPath: /etc/netdata/stream.conf
          subPath: stream
        - name: config
          mountPath: /etc/netdata/python.d/smartd_log.conf
          subPath: smartd
        securityContext:
          capabilities:
            add:
            - SYS_PTRACE
            - SYS_ADMIN
        resources: {}
      tolerations:
      - effect: NoSchedule
        operator: Exists
      volumes:
      - name: proc
        hostPath:
          path: /proc
      - name: log
        hostPath:
          path: /var/log
      - name: run
        hostPath:
          path: /var/run/docker.sock
      - name: sys
        hostPath:
          path: /sys
      - name: config
        configMap:
          name: netdata-conf-slave
      dnsPolicy: ClusterFirstWithHostNet
---
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: netdata-master
  namespace: netdata
  labels:
    app: netdata
    role: master
spec:
  serviceName: netdata
  replicas: 1
  volumeClaimTemplates:
  - metadata:
      name: database
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
  - metadata:
      name: alarms
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 100Mi
  selector:
    matchLabels:
      app: netdata
      release: release-name
      role: master
  template:
    metadata:
      labels:
        app: netdata
        release: release-name
        role: master
      annotations:
        checksum/config: 4135c3e8f9e2c4f608f2ace154a10e1bda62de005b080e14e131142d07f08668
    spec:
      securityContext:
        fsGroup: 201
      serviceAccountName: netdata
      initContainers: null
      containers:
      - name: netdata
        image: netdata/netdata:v1.18.0
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - killall netdata; while killall -0 netdata; do sleep 1; done
        ports:
        - name: http
          containerPort: 19999
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /api/v1/info
            port: http
          timeoutSeconds: 1
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api/v1/info
            port: http
          timeoutSeconds: 1
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: config
          mountPath: /etc/netdata/health_alarm_notify.conf
          subPath: health
        - name: config
          mountPath: /etc/netdata/netdata.conf
          subPath: netdata
        - name: config
          mountPath: /etc/netdata/stream.conf
          subPath: stream
        - name: database
          mountPath: /var/cache/netdata
        - name: alarms
          mountPath: /var/lib/netdata
        resources: {}
      volumes:
      - name: config
        configMap:
          name: netdata-conf-master
