apps/6-netdata/5_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: netdata
  namespace: netdata
  labels:
    app: netdata
    chart: netdata-1.1.3
    release: release-name
    heritage: Tiller
    role: master
spec:
  type: ClusterIP
  ports:
  - port: 19999
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: netdata
    release: release-name
    role: master
