apps/6-netdata/6_ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: netdata
  namespace: netdata
  labels:
    app: netdata
    chart: netdata-1.1.3
    release: release-name
    heritage: Tiller
  annotations:
    kubernetes.io/ingress.class: nginx-internal
    certmanager.k8s.io/cluster-issuer: "internal"
    prometheus.io/probe: "true"
spec:
  tls:
  - hosts:
    - netdata.k8s.grigri
    secretName: netdata-tls
  rules:
  - host: netdata.k8s.grigri
    http:
      paths:
      - path: /
        backend:
          serviceName: netdata
          servicePort: http
